# activity-dashboard

./: .gitignore  CONTEXT.md  Makefile  README.md  config.example.yaml  pyproject.toml
activity_dashboard/: __init__.py  cli.py  config.py  item.py  render.py  rules.py
activity_dashboard/adapters/: __init__.py  gdocs.py  github.py  gmail.py  jira.py  launchpad.py
activity_dashboard/templates/: report.html.j2
docs/superpowers/plans/: 2026-05-13-activity-dashboard.md
docs/superpowers/specs/: 2026-05-13-activity-dashboard-design.md
tests/: test_cli.py  test_config.py  test_gdocs_adapter.py  test_github_adapter.py  test_gmail_adapter.py  test_item.py  test_jira_adapter.py  test_launchpad_adapter.py  test_render.py  test_rules.py  test_smoke.py
