[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "activity-dashboard"
version = "0.1.0"
description = "Personal activity dashboard aggregating GitHub, Launchpad, Jira, and 1-1 notes."
requires-python = ">=3.11"
dependencies = [
    "PyGithub>=2.1",
    "launchpadlib>=1.11",
    "atlassian-python-api>=3.41",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.0",
    "Jinja2>=3.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
activity-dashboard = "activity_dashboard.cli:main"

[tool.setuptools.packages.find]
include = ["activity_dashboard*"]

[tool.setuptools.package-data]
activity_dashboard = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
